CVS -
- aclocal.m4:
	- Minor patch for intl check (really this time) (Albert Chin)
- faq.html:
	- Fixed typo in section 6.1 (discovered by Bob Farmer).
- files.c:
  diralphasort()
	- Changed stat calls to lstat to stop abort on symlinks, otherwise
	  return 0.  (Matthias Andree, fixes bug #58)

nano-1.0.0 - 03/22/2001
- General
	- Added void to functions declared as () args, nano.c:do_mark()
	  and search.c:regexp_cleanup(). (Christian Weisgerber).
	- Changed internal variables called "new" to "newnode" to avoid
	  the "new" C++ reserved word, even though there is likely no way
	  nano will EVER be compilable with a C++ compiler. (suggested by
	  Rocco Corsi).
- ca.po, es.po:
	- Final tweaks for Nano 1.0.
- cs.po:
	- Czech translation from Vaclav Haisman.
- nano.info:
	- Added dir entry (Albert Chin).
- winio.c:
  statusq()
	- Added NANO_BACK_KEY and NANO_FORWARD_KEY cases for left and right.

1.0-test prerelease - 03/17/2001
- nano.c:
  do_wrap()
	- Added case for autoindenting text causing new line (Adam).
	- Added SAMELINE case to above.  Added checks to cases 1b and
	  2b for placement of cursor.
- move.c:
  page_down()
	- Check for totlines < editwinrows in check for superflous 
	  edit update (fixed BUG #57).
- search.c:
  print_replaced()
	- s/occurence/occurrence typos (Jordi).
  search_init()
	- If using Pico mode and regex and same answer is entered, use
	  last_search string instead of answer (fixes BUG #56).
- nano.texi:
	- Meta-Z correction and grammar in --enable-tiny desc (Neil Parks).

nano-0.9.99pre3 - 02/19/2001
- General
  GNU compliance issues:
	- Reworked shortcut list, put "Get Help" into default list, 
	  removed "Goto Line", aligned "Read File" with "Write Out" and 
	  "Replace" with "Where is" for consistency.
	- Added texinfo manual nano.texi.  Added texi options to 
	  Makefile.am.	
- configure.in:
	- Autoconf compatibility fixes (Pavel Roskin)
	- Added separate check for resizeterm().
	- ALL_LINGUAS: added hu and ca.
- cut.c: